force-app/main/default/objects/GTM_Assessment_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <description>Carried over from the Engagement Link's own Account, so the request shows the full chain (Account / Contact / Lead / Opportunity / Engagement Link) without having to hop through the link record.</description>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assessment Requests</relationshipLabel>
    <relationshipName>GTM_Assessment_Requests</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>