force-app/main/default/objects/GTM_Assessment_Request__c/fields/Advisory_Reason__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Reason__c</fullName>
    <label>Advisory Reason</label>
    <description>Why the tier was suppressed, in one line a rep can read (e.g. "Source platform 'Adobe Campaign' is not one the accelerator can extract from."). Populated only when Assessment_Advisory__c is TRUE.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>