force-app/main/default/objects/GTM_Assessment_Request__c/fields/Answers_JSON__c.field-meta.xml
<CustomField>
    <fullName>Answers_JSON__c</fullName>
    <label>Answers JSON</label>
    <description>Offering-agnostic per-question answer blob for submissions scored
        against the new GTM_Instrument_Definition__c / _Question_Definition__c schema
        (docs/architecture/gtm-instrument-schema.md). A single JSON object keyed by
        each question's stable Question_Key__c, e.g. {"q1":"yes","q2":["a","b"]} --
        one flat map, not a child record per answer, to avoid row explosion under
        guest load. This is the generic-path counterpart to the Migration-Accelerator-
        specific Section_Scores__c / Supplement_Scores__c hybrid; a submission on the
        new schema never populates Estate_Complexity_*__c or Instrument_Pair__c. Opaque
        to Apex except for outcome-mapping resolution (sub-issue 03/04).</description>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>