force-app/main/default/objects/GTM_Assessment_Request__c/fields/Assessment_Flags__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Flags__c</fullName>
    <label>Assessment Flags</label>
    <description>JSON array of non-blocking annotations raised by the scorer, e.g. [{"code":"high_rebuild_ratio","message":"..."}]. Annotations do not change the score or the tier -- they are things a rep needs to say out loud even when the headline number looks good. Written by GtmAssessmentScoring; rendered by GtmReadoutController.</description>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>