force-app/main/default/objects/GTM_Assessment_Request__c/fields/Assessment_Tier__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Tier__c</fullName>
    <label>Assessment Tier</label>
    <description>Migration-readiness band derived from Assessment_Score__c at submission time, and the thing that decides what is sold: Discovery First (8-14, cannot responsibly scope yet), Prep Required (15-20, migratable once named prerequisites are met), Accelerator-Ready (21-26, standard engagement), Fast-Track (27-32, compressed / fixed-scope candidate). A HIGH score means a SMALL, SIMPLE, LOW-RISK estate -- not a sophisticated marketing operation. Two overrides apply on top of the band: a source_access answer of 1 caps the tier at Discovery First, and an unsupported source/target pair suppresses this field entirely (see Assessment_Advisory__c). Drives the readout template.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discovery First</fullName>
            </value>
            <value>
                <fullName>Prep Required</fullName>
            </value>
            <value>
                <fullName>Accelerator-Ready</fullName>
            </value>
            <value>
                <fullName>Fast-Track</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>