force-app/main/default/objects/GTM_Assessment_Request__c/fields/Branch_Platform__c.field-meta.xml
<CustomField>
    <fullName>Branch_Platform__c</fullName>
    <label>Branch Platform</label>
    <description>The Q0 routing answer -- which question variant the requester was shown. Note this only records the variant; the source/target pair the unsupported-pair gate evaluates comes from Current_Platform__c and Target_Platform__c (see GtmMigrationPairs).</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MCE</fullName>
            </value>
            <value>
                <fullName>MCAE</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Non-Salesforce</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>