force-app/main/default/objects/GTM_Assessment_Request__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <description>Carried over from the Engagement Link's own Contact, when the requester was already bound to a known contact instead of only a Lead.</description>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assessment Requests</relationshipLabel>
    <relationshipName>GTM_Assessment_Requests</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>