force-app/main/default/objects/GTM_Assessment_Request__c/fields/Contact_Count__c.field-meta.xml
<CustomField>
    <fullName>Contact_Count__c</fullName>
    <label>Contact / Lead Database Size</label>
    <description>Total number of contacts or leads in the current MA platform.</description>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>