force-app/main/default/objects/GTM_Assessment_Request__c/fields/Current_Platform__c.field-meta.xml
<CustomField>
    <fullName>Current_Platform__c</fullName>
    <label>Current Platform</label>
    <type>Text</type>
    <length>255</length>
</CustomField>