force-app/main/default/objects/GTM_Assessment_Request__c/fields/Decision_Makers__c.field-meta.xml
<CustomField>
    <fullName>Decision_Makers__c</fullName>
    <label>Decision Makers</label>
    <description>Names and roles of the people who will approve the final vendor and project decision.</description>
    <length>255</length>
    <type>Text</type>
</CustomField>