force-app/main/default/objects/GTM_Assessment_Request__c/fields/Environment_Size__c.field-meta.xml
<CustomField>
    <fullName>Environment_Size__c</fullName>
    <label>Environment Size</label>
    <type>Text</type>
    <length>255</length>
</CustomField>