force-app/main/default/objects/GTM_Assessment_Request__c/fields/Estate_Complexity_Band__c.field-meta.xml
<CustomField>
    <fullName>Estate_Complexity_Band__c</fullName>
    <label>Estate Complexity Band</label>
    <description>Light (6-9) / Moderate (10-13) / Heavy (14-18), derived from Estate_Complexity_Score__c by GtmEstateComplexity. Reported alongside the readiness tier as the second axis of the readout, never blended with it.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Light</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Heavy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>