force-app/main/default/objects/GTM_Assessment_Request__c/fields/Estate_Complexity_Basis__c.field-meta.xml
<CustomField>
    <fullName>Estate_Complexity_Basis__c</fullName>
    <label>Estate Complexity Basis</label>
    <description>Where the complexity number came from. "Self-Estimated" is the prospect's own pre-scan answer, collected in the questionnaire; "Measured" is the post-scan figure derived from an actual extract. The distinction matters when a rep quotes it: a self-estimate is a starting hypothesis, a measurement is evidence.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self-Estimated</fullName>
                <label>Self-Estimated (pre-scan)</label>
            </value>
            <value>
                <fullName>Measured</fullName>
                <label>Measured (post-scan)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>