force-app/main/default/objects/GTM_Assessment_Request__c/fields/Estate_Complexity_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Estate_Complexity_Dimensions__c</fullName>
    <label>Estate Complexity Dimensions</label>
    <description>JSON blob of per-dimension complexity scores, e.g. {"journey_footprint":2,"scripting_depth":3}. Same shape and same handling as Section_Scores__c, for the complexity instrument rather than the readiness one.</description>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>