force-app/main/default/objects/GTM_Assessment_Request__c/fields/Instrument_Pair__c.field-meta.xml
<CustomField>
    <fullName>Instrument_Pair__c</fullName>
    <label>Instrument Pair</label>
    <description>DeveloperName of the GTM_Assessment_Pair__mdt pack that scored this request, e.g. hubspot__mcn. Essential, not diagnostic: the pack decides what the eight slots ASKED, so without it a stored Section_Scores__c blob becomes unreadable the moment someone edits a pack -- a 2 against a key nobody can look up any more. With it, reopening a year-old readout still resolves the same chain and prints the same questions.</description>
    <type>Text</type>
    <length>80</length>
</CustomField>