force-app/main/default/objects/GTM_Assessment_Request__c/fields/Instrument_Version__c.field-meta.xml
<CustomField>
    <fullName>Instrument_Version__c</fullName>
    <label>Instrument Version</label>
    <description>Version of the resolved pack at the moment of scoring. Instrument_Pair__c says which pack; this says which edition of it, so a pack edited after the fact is visible as a version mismatch rather than as a readout that quietly disagrees with the number on the record.</description>
    <type>Text</type>
    <length>40</length>
</CustomField>