force-app/main/default/objects/GTM_Assessment_Request__c/fields/Key_Integrations__c.field-meta.xml
<CustomField>
    <fullName>Key_Integrations__c</fullName>
    <label>Key Integrations to Maintain</label>
    <description>CRM, CMS, eCommerce, data warehouse, analytics, and other systems that must stay connected after migration.</description>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>