force-app/main/default/objects/GTM_Assessment_Request__c/fields/Migration_Goals__c.field-meta.xml
<CustomField>
    <fullName>Migration_Goals__c</fullName>
    <label>Migration Goals</label>
    <description>What capabilities or outcomes does the prospect need from the new platform?</description>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>