force-app/main/default/objects/GTM_Assessment_Request__c/fields/Monthly_Send_Volume__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Send_Volume__c</fullName>
    <label>Monthly Email Send Volume</label>
    <description>Approximate number of emails sent per month on the current platform.</description>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>