force-app/main/default/objects/GTM_Assessment_Request__c/fields/Offering_Key__c.field-meta.xml
<CustomField>
    <fullName>Offering_Key__c</fullName>
    <label>Offering Key</label>
    <description>Which GTM offering this assessment was scored against.
        Set once, server-side, at insert -- never client-supplied. Matches
        GTM_Offering__mdt.Offering_Key__c. Deliberately required=false: this
        object already holds real production rows with no value here yet;
        see scripts/data/backfill-assessment-offering-key.apex and ADR-0007
        section 3 for why this stays optional at the schema level rather
        than being flipped to required after backfill.
    </description>
    <length>80</length>
    <type>Text</type>
</CustomField>