force-app/main/default/objects/GTM_Assessment_Request__c/fields/Requester_Email__c.field-meta.xml
<CustomField>
    <fullName>Requester_Email__c</fullName>
    <label>Requester Email</label>
    <description>Used to create/match the Lead and to send an optional confirmation to the requester. Not required for the request to be recorded in Salesforce -- the write itself happens through the authenticated backend regardless.</description>
    <type>Email</type>
</CustomField>