force-app/main/default/objects/GTM_Assessment_Request__c/fields/Requester_Name__c.field-meta.xml
<CustomField>
    <fullName>Requester_Name__c</fullName>
    <label>Requester Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>