force-app/main/default/objects/GTM_Assessment_Request__c/fields/Saved_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Saved_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The client-specific configured link the requester was viewing when they booked an assessment.</description>
    <label>Client Link</label>
    <referenceTo>GTM_Saved_Configuration__c</referenceTo>
    <relationshipLabel>Assessment Requests</relationshipLabel>
    <relationshipName>GTM_Assessment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>