force-app/main/default/objects/GTM_Assessment_Request__c/fields/Section_Scores__c.field-meta.xml
<CustomField>
    <fullName>Section_Scores__c</fullName>
    <label>Section Scores</label>
    <description>JSON blob of per-dimension scores from the migration-readiness questionnaire, e.g. {"estate_scale":3,"source_access":2}. Keys are the eight dimensions in GtmAssessmentScoring.DIMENSIONS; the human wording for each lives in GTM_Assessment_Question__mdt. Opaque to Apex except for readout templating.</description>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>