force-app/main/default/objects/GTM_Assessment_Request__c/fields/Target_Platform__c.field-meta.xml
<CustomField>
    <fullName>Target_Platform__c</fullName>
    <label>Target Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Salesforce Marketing Cloud (SFMC)</fullName><label>Salesforce Marketing Cloud (SFMC)</label><default>false</default></value>
            <value><fullName>Salesforce Marketing Cloud Next</fullName><label>Salesforce Marketing Cloud Next</label><default>false</default></value>
            <value><fullName>Marketo</fullName><label>Marketo</label><default>false</default></value>
            <value><fullName>HubSpot</fullName><label>HubSpot</label><default>false</default></value>
            <value><fullName>Pardot / Account Engagement</fullName><label>Pardot / Account Engagement</label><default>false</default></value>
            <value><fullName>Not decided yet</fullName><label>Not decided yet</label><default>false</default></value>
            <value><fullName>Other</fullName><label>Other</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>