force-app/main/default/objects/GTM_Assessment_Request__c/fields/Urgency_Driver__c.field-meta.xml
<CustomField>
    <fullName>Urgency_Driver__c</fullName>
    <label>What's Driving the Timeline?</label>
    <description>Contract renewal, platform end-of-life, board mandate, acquisition, or other specific event creating urgency.</description>
    <length>255</length>
    <type>Text</type>
</CustomField>